appId: com.fitnessapp.dev
---
- runFlow: create-profile.yaml
- scrollUntilVisible:
    element:
      id: open-goals-energy
    direction: DOWN
- tapOn:
    id: open-goals-energy
- assertVisible: Goals and energy
- scrollUntilVisible:
    element:
      text: Maintain weight
    direction: DOWN
- tapOn: Maintain weight
- scrollUntilVisible:
    element:
      text: Save goal
    direction: DOWN
- tapOn: Save goal
- assertVisible: Goal saved successfully.
- stopApp
- launchApp
- tapOn:
    id: tab-profile
- assertVisible: '175'
- assertVisible: '75'
